--- a/javascript-avancado-i-aula1/aluraframe/client/index.html
+++ b/javascript-avancado-i-aula1/aluraframe/client/index.html
@@ -9,7 +9,7 @@
   <body class="container">
     <h1 class="text-center">Negociações</h1>
 
-    <form class="form" onsubmit="negociacaoController.adiciona(event)">
+    <form class="form" onsubmit="negociacaoController.addNegociation(event)">
       <div class="form-group">
         <label for="data">Data</label>
         <input type="date" id="data" class="form-control" required autofocus />
@@ -71,8 +71,6 @@
     </table>
     <script src="js/app/models/Negociacao.js"></script>
     <script src="js/app/controllers/NegociacaoController.js"></script>
-    <script>
-      let negociacaoController = new NegociacaoController();
-    </script>
+    <script src="js/app/helpers/DateHelper.js"></script>
   </body>
 </html>
