--- a/svg/index.html
+++ b/svg/index.html
@@ -52,6 +52,6 @@
             </div>
         </section>
 
-        <script src="assets/js/scripts.js"></script>
+        <script type="module" src="assets/js/scripts.js"></script>
     </body>
 </html>
